
--- current version
faster rasterization of polygons (introduced in previous versions, but, by mistake, was not used in most cases)
faster handling of GMT ncdf files by Mike Sumner
new argument "na.last" to "unique" suggsted by Marco Sciaini. https://github.com/rspatial/raster/issues/23 

--- 2-Nov-2018, version: 2.8-4
Improved estimation of available RAM with contributions by Lorenzo Busetto. RAM available is now computed on windows, linux and mac. No more that 60% of available RAM is used (if the estimated RAM needed is not too low). Not more than raster:::.maxmemory() is used; but it should now be safe to set this to Inf. If canProcessInMemory() returns FALSE, chunksize is set 25% of available RAM, or raster:::.chunksize(), whichever is lower. (set options via rasterOptions())

testthat unit tests introduced by Mike Sumner and Jakub Nowosad
as.character() for Raster objects to create the R code to re-create the Raster skeleton in examples.

Reading point values via GDAL has become slower in 2.7-15, reverted to previous function. Thanks to Andrew Brown and Dylan Beaudette for identifying the problem.

Bare negate with a Raster* (e.g. -r) now works. https://github.com/rspatial/raster/issues/21

Bug fixes:
fixed the link for GADM countries download. Bug reported by Loic Dutrieux
fixed corner-case bug in alignExtent (for a small extent, touching a grid cell), affecting crop; reported by 
Judith Mourant and Paul Fenimore
fixed problem with subs reported by Andy Craig https://github.com/rspatial/raster/issues/17
Previous version had a maxmemory value that was too high (reported by Lorenzo Busetto)

--- 16-Oct-2018, version: 2.7-15
faster extraction for points via GDAL (reverted to previous code in version 2.8-4)

Bug fixes:
buffer did not work with values in memory. Bug reported and solution proposed by Carlos Alberto Arnillas
extract with point and smaller single cell buffer failed when an aggregation function was provided. Reported by Lucas